Fix titlebar overflow

--- a/public/s/styles/scss/client.scss
+++ b/public/s/styles/scss/client.scss
@@ -41,18 +41,22 @@
     height: 100%;
 }
 
+%title-icon {
+    @include flex-shrink(0);
+
+    display: block;
+    margin: auto;
+    height: 2em;
+    width: 2em;
+    opacity: .75;
+
+    &:hover, &:focus { opacity: .85; }
+
+    &:active { opacity: 1; }
+}
+
 @mixin title-icon($elem) {
-    .#{$elem} {
-        display: block;
-        margin: auto;
-        height: 2em;
-        width: 2em;
-        opacity: .75;
-
-        &:hover, &:focus { opacity: .85; }
-
-        &:active { opacity: 1; }
-    }
+    .#{$elem} { @extend %title-icon; }
 }
 
 html, body { height: 100%; }
@@ -783,9 +787,6 @@ body {
     height: $bar-height;
     width: 100%;
     z-index: 20;
-    overflow-x: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
     background-color: darken($light-color, 5%);
     color: $dark-color;
     box-shadow: inset 0 -1px 0 0 rgba(0,0,0,.1),
@@ -809,6 +810,7 @@ body {
     @include justify-content(flex-end);
     @include align-items(center);
     @include align-content(center);
+    @include flex-shrink(0);
 
     .toast-minimized & { display: none; }
 }
@@ -816,6 +818,9 @@ body {
 .room-title {
     @extend %transition;
 
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
     font-size: 1.2em;
     font-weight: 700;
     margin: 0;
@@ -927,6 +932,7 @@ body {
     @include justify-content(flex-end);
     @include align-items(center);
     @include align-content(center);
+    @include flex-shrink(0);
 }
 
 .embed-button, .search-button {
